# filterforpycantus

./: README.md  manage.py  pyproject.toml  requirements.txt
filter/: construct_file.py  fields.py  forms.py  urls.py  views.py  widgets.py
filter/static/: db.csv  sources.csv
filter/static/filter/: db.csv  genre.csv  sources.csv
filter/templates/: base.html
filter/templates/filter/: about.html  contact.html  download.html  help.html  index.html
filterforpycantus/: asgi.py  settings.py  urls.py  wsgi.py
